--- a/static/custom.css
+++ b/static/custom.css
@@ -69,7 +69,7 @@ a#blue:hover {
 div.gallery {
   margin: 5px;
   float: left;
-  width: 200px;
+  width: 300px;
   border: 1px solid #D5D6D5;
 }
 
@@ -102,7 +102,12 @@ div.desc {
   font-family: Georgia, "Times New Roman", Times, serif;
   text-transform: capitalize;
 }
-
+.imgSlideshow2 {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
 .slides {
   display: block;
   margin-left: auto;
@@ -110,6 +115,16 @@ div.desc {
   padding: 10px;
   max-width: 100%;
   height: auto;
+}
+.button-l{
+  position: absolute;
+  left: 10px;
+  top: 50%;
+}
+.button-r{
+  position: absolute;
+  right: 10px;
+  top: 50%;
 }
 
 .grid-article {
