--- a/templates/openmic.html
+++ b/templates/openmic.html
@@ -12,14 +12,62 @@
 <div name="content" class="margin">
     <p class="text">
         Open Mic Night is a safe and inclusive space for for members of the ASAP community to interact with 
-        and perform for one another.  We feature musical performances, dance, stand-up comedy, slam-poetry among other 
-        forms of performance art.  Keep an eye out for our next event!
+        and perform for one another.  We feature musical performances, dance, stand-up comedy, slam-poetry and other 
+        forms of performance art.  Click through the gallery below to see some photos and videos from our events this semester!
     </p>
     <br>
-    <h3 class="heading">December 8, 2018</h3>
-    <p class="text">
-        Our first open mic night hosted at the Signet Society was a smashing success!  Click through the gallery
-        below to see pictures of the event.
-    </p>
+    <h3 class="heading">Photo Gallery</h3>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.2.jpg') }}">
+        <div class="desc">Michael Yin '22 and Eric Cheng '20</div>
+    </div>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.3.jpg') }}">
+        <div class="desc">Audience members watch intently</div>
+    </div>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.4.jpg') }}">
+        <div class="desc">Paolo Pasco '22</div>
+    </div>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.5.jpg') }}">
+        <div class="desc">More audience reactions!</div>
+    </div>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.6.jpg') }}">
+        <div class="desc">Sabrina Wu '20</div>
+    </div>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.7.jpg') }}">
+        <div class="desc">More audience reactions!</div>
+    </div>
+    <div class="gallery">
+        <img src="{{ url_for('static', filename='openmic/12-8-18/12.8.18.1.jpg') }}">
+        <div class="desc">More audience reactions!</div>
+    </div>
+    <div class="gallery">
+        <img class="slides" src="{{ url_for('static', filename='openmic/5-1-19/5.1.19.1.jpeg') }}">
+        <div class="desc">Sushi!</div>
+    </div>
+    <div class="gallery">
+        <img class="slides" src="{{ url_for('static', filename='openmic/5-1-19/5.1.19.3.jpeg') }}">
+        <div class="desc">KeeHup Yong '19</div>
+    </div>
+    <div class="gallery">
+        <img class="slides" src="{{ url_for('static', filename='openmic/5-1-19/5.1.19.4.jpeg') }}">
+        <div class="desc">KeeHup Yong '19</div>
+    </div>
+    <div class="gallery">
+        <img class="slides" src="{{ url_for('static', filename='openmic/5-1-19/5.1.19.5.jpeg') }}">
+        <div class="desc">More audience reactions!</div>
+    </div>
+    <div class="gallery">
+        <img class="slides" src="{{ url_for('static', filename='openmic/5-1-19/5.1.19.6.jpeg') }}">
+        <div class="desc">More audience reactions!</div>
+    </div>
+    <div class="gallery">
+        <img class="slides" src="{{ url_for('static', filename='openmic/5-1-19/5.1.19.7.jpg') }}">
+        <div class="desc">KeeHup Yong '19 and Julia Riew '21</div>
+    </div>
 </div>
 {% endblock %}
